tests/cases/fail/no_matching_overload_arity.p4
def show(value: int) -> None:
    print(value)

def main() -> None:
    show(1, 2)
